fixed room prompt 2